<resources>
    <string name="app_name">Android Cluedo</string>
    <string name="action_settings">Settings</string>
    <string name="cluedoTitle">Cluedo</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="numBots">Number of Bots</string>
    <string name="playerCharacter">Player Character</string>
    <string name="playerName">Player Name</string>
    <string name="start">Start</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_board">Board</string>
    <string name="title_hand">Hand</string>
    <string name="title_notes">Notes</string>
</resources>
