<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_board">

    <fragment
        android:id="@+id/navigation_board"
        android:name="com.yates.androidcluedo.ui.board.BoardFragment"
        android:label="@string/title_board"
        tools:layout="@layout/fragment_hand" />

    <fragment
        android:id="@+id/navigation_hand"
        android:name="com.yates.androidcluedo.ui.hand.HandFragment"
        android:label="@string/title_hand"
        tools:layout="@layout/fragment_board" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.yates.androidcluedo.ui.notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" />
</navigation>